change profile pic and add phone number

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ajoy Pandit</title>
 </head>
+
 <body>
     <table>
         <tr>
-            <td><img src="profile.jpg" alt="Ajoy Pandit"></td>
+            <td><img src="profile2.jpeg" alt="Ajoy Pandit"></td>
             <td>
                 <p>
                     <h1><em>Ajoy Pandit</em></h1>
@@ -31,10 +33,12 @@
     <hr>
     <h3>Contact Information</h3>
     <p>
-      Basugaon, dist. Chirang(BTAD) <br>
-      Assam  <br>
-      ajoybasugaon@gmail.com
+        Basugaon, dist. Chirang(BTAD) <br>
+        Assam <br>
+        ajoybasugaon@gmail.com <br>
+        +91 6002 392 148
     </p>
-    
+
 </body>
+
 </html>
